# Tributary-ai

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: config.yaml  local_to_json.py  pdf_recursive_chunking.py  with_events_and_metrics.py
examples/distributed/: README.md  config.docker.yaml  config.yaml  kafka_example.py  pubsub_example.py  rabbitmq_example.py  redis_example.py  servicebus_example.py  sqs_example.py
examples/gutenberg/: config.yaml  run.py
src/tributary/: __init__.py  cli.py
src/tributary/chunkers/: __init__.py  base.py  fixed_chunker.py  models.py  recursive_chunker.py  router.py  sentence_chunker.py  sliding_window_chunker.py  token_based_chunker.py
src/tributary/dashboard/: server.py
src/tributary/dashboard/static/: dashboard.html
src/tributary/destinations/: __init__.py  base.py  chroma_destination.py  json_destination.py  models.py  multi_destination.py  pgvector_destination.py  pinecone_destination.py  qdrant_destination.py
src/tributary/embedders/: __init__.py  base.py  bedrock_embedder.py  cohere_embedder.py  custom_embedder.py  models.py  openai_embedder.py  vertex_embedder.py  voyage_embedder.py
src/tributary/extractors/: __init__.py  base.py  csv_extractor.py  html_extractor.py  json_extractor.py  markdown_extractor.py  models.py  pdf_extractor.py  text_extractor.py
src/tributary/pipeline/: adaptive_batcher.py  config.py  correlation.py  cost_estimator.py  events.py  hooks.py  metrics.py  models.py  orchestrator.py  otel_exporter.py  quality.py  retry.py  schema.py  state_store.py  webhook.py
src/tributary/sources/: __init__.py  azure_source.py  base.py  gcs_source.py  local_source.py  models.py  s3_source.py  web_scraper_source.py
src/tributary/utils/: lazy_import.py
src/tributary/workers/: __init__.py  distributed_pipeline.py  embedding_worker.py  extraction_worker.py  factory.py  messages.py  queue.py
src/tributary/workers/backends/: __init__.py  kafka_queue.py  pubsub_queue.py  rabbitmq_queue.py  redis_queue.py  servicebus_queue.py  sqs_queue.py
tests/: test_adaptive_batcher.py  test_azure_source.py  test_chunker_router.py  test_cli.py  test_csv_extractor.py  test_destination_registry.py  test_embedders.py  test_fixed_chunker.py  test_gcs_source.py  test_hooks.py  test_json_extractor.py  test_markdown_extractor.py  test_messages.py  test_multi_destination.py  test_pdf_extractor.py  test_pipeline.py  test_recursive_chunker.py  test_registry.py  test_resilience.py  test_s3_source.py  test_schema.py  test_sliding_window_chunker.py  test_text_extractor.py  test_web_scraper_source.py
tests/chunkers/: test_chunker_registry.py  test_sentence_chunker.py  test_token_based_chunker.py
tests/destinations/: test_json_destination.py
tests/extractors/: test_html_extractor.py
tests/pipeline/: test_config.py  test_dashboard.py  test_observability.py  test_pipeline.py  test_quality.py  test_schema.py  test_webhook.py
tests/sources/: test_azure_source.py  test_local_source.py  test_source_registry.py  test_web_scraper_source.py
tests/utils/: test_lazy_import.py
tests/workers/: test_distributed_pipeline.py  test_embedding_worker.py  test_extraction_worker.py  test_factory.py  test_kafka_queue.py  test_messages.py  test_pubsub_queue.py  test_rabbitmq_queue.py  test_redis_queue.py  test_servicebus_queue.py  test_sqs_queue.py
