[project]
name = "tributary"
version = "0.1.0"
description = "A lightweight, high-concurrency data ingestion and chunking pipeline for RAG systems."
readme = "README.md"
authors = [
    { name = "AbhishekMandapmalvi", email = "abhishekrmandapmalvi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    # Core — always required
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.3",
    "click>=8.3.2",
    "jsonschema>=4.26.0",
    "lxml>=6.0.2",
    "markdown-it-py>=4.0.0",
    "mdit-plain>=1.0.1",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
# Sources
s3 = ["aiobotocore>=3.4.0"]
gcs = ["gcloud-aio-storage>=9.6.4"]
azure = ["azure-storage-blob>=12.28.0"]
web = ["aiohttp>=3.13.5"]

# Extractors
pdf = ["pymupdf>=1.27.2.2"]

# Chunkers
sentence = ["nltk>=3.9.4"]
token = ["tiktoken>=0.12.0"]

# Embedders
openai = ["openai>=2.30.0"]
cohere = ["cohere>=5.21.1"]

# Destinations
pinecone = ["pinecone>=8.1.1"]
qdrant = ["qdrant-client>=1.17.1"]
chroma = ["chromadb>=1.5.6"]
pgvector = ["asyncpg>=0.31.0"]

# Dashboard
dashboard = ["fastapi>=0.135.3", "uvicorn>=0.44.0", "websockets>=16.0"]

# Everything
all = [
    "tributary[s3,gcs,azure,web,pdf,sentence,token,openai,cohere,pinecone,qdrant,chroma,pgvector,dashboard]",
]

[project.scripts]
tributary = "tributary.cli:cli"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "tributary[all]",
    "certifi>=2026.2.25",
    "moto[s3]>=5.1.22",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "requests>=2.33.1",
    "types-aiofiles>=25.1.0.20260408",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
