[project]
name = "tributary-ai"
version = "0.2.0"
description = "A lightweight, high-concurrency data ingestion and chunking pipeline for RAG systems."
readme = "README.md"
authors = [
    { name = "AbhishekMandapmalvi", email = "abhishekrmandapmalvi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    # Core — always required
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.3",
    "click>=8.3.2",
    "jsonschema>=4.26.0",
    "lxml>=6.0.2",
    "markdown-it-py>=4.0.0",
    "mdit-plain>=1.0.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
# Sources
s3 = ["aiobotocore>=3.4.0"]
gcs = ["gcloud-aio-storage>=9.6.4"]
azure = ["azure-storage-blob>=12.28.0"]
web = ["aiohttp>=3.13.5"]

# Extractors
pdf = ["pymupdf>=1.27.2.2"]

# Chunkers
sentence = ["nltk>=3.9.4"]
token = ["tiktoken>=0.12.0"]

# Embedders
openai = ["openai>=2.30.0"]
cohere = ["cohere>=5.21.1"]

# Destinations
pinecone = ["pinecone>=8.1.1"]
qdrant = ["qdrant-client>=1.17.1"]
chroma = ["chromadb>=1.5.6"]
pgvector = ["asyncpg>=0.31.0"]

# Dashboard
dashboard = ["fastapi>=0.135.3", "uvicorn>=0.44.0", "websockets>=16.0"]

# Distributed queue backends
redis = ["redis>=5.2.0"]
# aiobotocore (not aioboto3) so sqs and s3 extras share the same dep line.
# aioboto3 pins aiobotocore to 2.x while the s3 source requires 3.x — they
# cannot coexist. aiobotocore supports SQS natively via session.create_client.
sqs = ["aiobotocore>=3.4.0"]
rabbitmq = ["aio-pika>=9.4.0"]
pubsub = ["gcloud-aio-pubsub>=6.0.0"]
servicebus = ["azure-servicebus>=7.12.0"]
kafka = ["aiokafka>=0.12.0"]
distributed = [
    "tributary-ai[redis,sqs,rabbitmq,pubsub,servicebus,kafka]",
]

# Everything
all = [
    "tributary-ai[s3,gcs,azure,web,pdf,sentence,token,openai,cohere,pinecone,qdrant,chroma,pgvector,dashboard,distributed]",
]

[project.scripts]
tributary = "tributary.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tributary"]

[dependency-groups]
dev = [
    "tributary-ai[all]",
    "certifi>=2026.2.25",
    "moto[s3]>=5.1.22",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "requests>=2.33.1",
    "types-aiofiles>=25.1.0.20260408",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

# ---------------------------------------------------------------------------
# python-semantic-release
#
# Runs on every push to master via .github/workflows/release.yml.
# Analyzes commits since the last tag and decides the next version:
#   feat:       → minor bump
#   fix:        → patch bump
#   perf:       → patch bump
#   refactor:   → no release (skipped)
#   docs:       → no release
#   test:       → no release
#   chore:      → no release
#   BREAKING CHANGE: (in body/footer) → major bump
#
# PR label overrides (semantic-release reads the squash-merge commit body,
# so add one of these lines to the PR description or commit footer to
# force a specific bump type):
#   Release-As: major
#   Release-As: minor
#   Release-As: patch
# ---------------------------------------------------------------------------
[tool.semantic_release]
version_variables = ["src/tributary/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
changelog_file = "CHANGELOG.md"
build_command = "uv build"
commit_message = "chore(release): v{version} [skip ci]"
commit_parser = "angular"
major_on_zero = false  # 0.x.y → 0.(x+1).0 on feat, not 1.0.0

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "feat", "fix", "perf", "refactor",
    "docs", "test", "chore", "ci", "build", "style", "security",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
template_dir = "templates"
exclude_commit_patterns = [
    "^chore\\(release\\):",
    "^Merge ",
]

[tool.semantic_release.branches.main]
match = "master"
prerelease = false
